# Huabu-app

./: .gitignore  README.md  firestore.indexes.json  gradle.properties  gradlew  settings.gradle.kts
app/: build.gradle.kts  google-services-placeholder.json  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  huabu_native.cpp
app/src/main/java/com/huabu/app/: HuabuApplication.kt  MainActivity.kt
app/src/main/java/com/huabu/app/core/native/: HuabuNative.kt
app/src/main/java/com/huabu/app/data/firebase/: AuthService.kt  FirebaseService.kt  StorageService.kt
app/src/main/java/com/huabu/app/data/local/: Converters.kt  HuabuDatabase.kt
app/src/main/java/com/huabu/app/data/model/: Badge.kt  CodeSnippet.kt  Comment.kt  Conversation.kt  CurrentlyReading.kt  CurrentlyWatching.kt  Friend.kt  GameInvite.kt  GameStats.kt  GifItem.kt  LiveStream.kt  MediaTrack.kt  MemeItem.kt  Message.kt  MinesweeperGame.kt  MoodBoardItem.kt  NftItem.kt  Notification.kt  PinnedPost.kt  PlaylistItem.kt  Post.kt  ProfileEvent.kt  ProfilePhoto.kt  ProfilePoll.kt  ProfileTheme.kt  ProfileWidgetSettings.kt  RecentTrack.kt  SpotifyTrack.kt  (+7 more)
app/src/main/java/com/huabu/app/di/: DatabaseModule.kt  FirebaseModule.kt  NetworkModule.kt
app/src/main/java/com/huabu/app/service/: HuabuMessagingService.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
functions/: package.json
functions/src/: index.ts
gradle/: libs.versions.toml
(+91 files in other folders)
